--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			content="Web site created using create-react-app" />
 		<link
 			rel="apple-touch-icon"
-			href="%PUBLIC_URL%/veggie_bites-logo_192.png" />
+			href="%PUBLIC_URL%/veggie_bites-icon_192.png" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
